--- a/.rtd-environment.yml
+++ b/.rtd-environment.yml
@@ -1,12 +1,11 @@
-name: packagename
+name: packagename 
 
 channels:
     - astropy
 
 dependencies:
     - astropy
-    - Cython
-    - matplotlib
     - numpy
-#   - pip:
-#       - dependency_from_pip
+    - pip:
+        - sphinx-automodapi
+        - numpydoc
